OPENIDM-3726, OPENIDM-3712, OPENIDM-3728, OPENIDM-3729, OPENIDM-3734 - A series of minor ui fixes (adjusting heads, fixing bad links, fixing spacing issues, and restoring self-service tab.

--- a/openidm-ui/openidm-ui-admin/src/main/resources/css/config/adminStyle.less
+++ b/openidm-ui/openidm-ui-admin/src/main/resources/css/config/adminStyle.less
@@ -112,10 +112,6 @@
   Temporary styles due to conflicts in COMMONS
 */
 
-.page-header-button-group {
-  margin-top:0px;
-}
-
 .btn-default {
   color:@base-theme-color;
 }
